<resources>
    <string name="app_name">Travel Me</string>
    <string name="find_your_places">Find Your Places...</string>
    <string name="welcome_to">Welcome To</string>
    <string name="lets_go">Lets Go</string>
    <string name="secure_your_bookings">Secure Your Bookings</string>
    <string name="next">Next</string>
    <string name="secure_your_destinations">Secure Your Destinations</string>
    <string name="enjoy_your_trip">Enjoy Your Trip</string>
    <string name="northgate_jaffna">NorthGate Jaffna</string>
    <string name="hotel_cassendra">Hotel Cassendra</string>
    <string name="villa_vajrapani">Villa Vajrapani</string>
    <string name="hotel_cassendra1">Hotel Cassendra</string>
    <string name="northgate_jaffna1">NorthGate Jaffna</string>
    <string name="villa_vajrapani1">Villa Vajrapani</string>
    <string name="hi_eesara">Hi Eesara,</string>
    <string name="name">Name</string>
    <string name="trending_places">Trending Places</string>
    <string name="browse_places">Browse Places</string>
    <string name="villa_vajrapani2">Villa Vajrapani</string>
    <string name="northgate_jaffna2">NorthGate Jaffna</string>
    <string name="hotel_cassendra2">Hotel Cassendra</string>
    <string name="villa_vajrapani3">Villa Vajrapani</string>
    <string name="deluxe_bedroom_1200">Deluxe Bedroom - 1200$</string>
    <string name="standard_bedroom_1200">Standard Bedroom - 1200$</string>
    <string name="family_bedroom_1200">Family Bedroom - 1200$</string>
    <string name="handagedara_resort_and_spa_is_a_cozy_property_located_just_328_feet_from_the_mirissa_beach_guests_enjoy_free_wi_fi_access_at_all_areas_and_tastefully_furnished_guestrooms_set_in_the_south_of_sri_lanka_just_a_45_minute_drive_from_galle_city_handagedara_resort_and_spa_is_also_a_1_5_hour_drive_from_the_beautiful_sinharaja_rainforest_bandaranaike_international_airport_is_3_hours_away_by_car">Handagedara Resort and Spa is a cozy property located just 328 feet from the Mirissa Beach. Guests enjoy free Wi-Fi access at all areas and tastefully furnished guestrooms. Set in the south of Sri Lanka just a 45-minute drive from Galle City, Handagedara Resort and Spa is also a 1.5-hour drive from the beautiful Sinharaja Rainforest. Bandaranaike International Airport is 3 hours away by car.</string>
    <string name="northgate_jaffna3">NorthGate Jaffna</string>
    <string name="prices">Prices</string>
    <string name="call_now">Call Now</string>
    <string name="beach_side">Beach Side</string>
    <string name="mountains">Mountains</string>
    <string name="forest">Forest</string>
    <string name="country_side">Country Side</string>
    <string name="categories">Categories</string>
    <string name="return_home">Return Home</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="date_of_birth_2002_02_10">Date Of Birth : 2002 / 02 / 10</string>
    <string name="gender_male">Gender : Male</string>
    <string name="email_eesara_gmail_com">Email : eesara@gmail.com</string>
    <string name="name_eesara_megasooriya">Name : Eesara Megasooriya</string>
    <string name="discover_your_next_culinary_adventure">Discover your next culinary adventure.</string>
    <string name="reserve_your_desired_spots_effortlessly">Reserve your desired spots effortlessly.</string>
    <string name="discover_your_next_culinary_adventure1">Discover your next culinary adventure.</string>
    <string name="country_srilanka">Country : Srilanka</string>
</resources>